--- a/ongoing-projects/coding-projects.mdx
+++ b/ongoing-projects/coding-projects.mdx
@@ -1,22 +1,22 @@
 ---
-title: "Code projecten"
+title: "Code projects"
 published: "5-3-2023"
 slug: "coding-projects"
 ---
 
-# Coding projecten
+# Coding projects
 
-- Deze site (de Raynauld thuis plaats)
+- This site (the Raynauld Home Space)
 - Helsdeur Jamband App
 - Music Companion
 
-## Coding projecten op een lager pitje
+## More coding projects
 
 - Social Companion
-- Website voor Consented
-- Website voor One Love
+- Website: Consented
+- Website: One Love
 
-### Coding projecten op een bijna uitstaand pitje
+### Even more coding projects
 
 - Silly Games
-- Ieder van de tachtig game ideeen die ik heb
+- All of my gaziljun game ideas
