--- a/ongoing-projects/music-projects.mdx
+++ b/ongoing-projects/music-projects.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Muziek projecten"
+title: "Music projects"
 published: "5-3-2023"
 slug: "music-projects"
 ---
 
-# Muzikale projecten
+# Music projects
 
-- Een Mesnier setlist klaarhebben en uitvoeren
-- Een gamemuziek setlitst klaarhebben en uitvoeren
-- Een Bach setlist voor op de bassgitaar
-- Een Bach setlist voor op de klassieke gitaar
+- A Mesnier setlist ready to play
+- A gamemusicsetlist ready to play
+- A Bach setlist ready to play for the bass guitar
+- A Bach setlist ready to play for the classical guitar
