--- a/ongoing-projects/writing-projects.mdx
+++ b/ongoing-projects/writing-projects.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Schrijf projecten"
+title: "Writing projects"
 published: "5-3-2023"
-slug: "writing"
+slug: "writing-projects"
 ---
 
-# Schrijf projecten
+# Writing projects
 
-- Herzien van Tijdloos
-- Herzien van Grenzenloos
-- Afmaken van Dimensieloos
+- Revision of Tijdloos
+- Revision of Grenzenloos
+- Finishing of Dimensieloos
